# cell_interaction_gnn

./: GloBIAS_Workshop_group4.ipynb  docker notes.txt  pyproject.toml  requirements-cpu.txt  requirements.txt  run_all.sh
analysis/2.create_network/simulation/del-div/extract_subnetwork_batch/: base_path.txt
analysis/3.training_attribution/epidermis/paw/bidirectional_sum_AG/run_analyze_prediction_performance/: output_confusion_matrix.txt  output_plot_auc.txt  output_plot_performance_vs_time.txt
analysis/3.training_attribution/epidermis/paw/feature_ZZFR/calculate_attribution_batch/: base_path.txt  run_calculate_attribution.py
analysis/3.training_attribution/epidermis/paw/feature_ZZFR/softmax_to_pool_attribution_batch/: run_softmax_to_pool_attribution.py
analysis/3.training_attribution/epidermis/paw/unidirectional_sum_AGFR/calculate_attribution_batch/: run_calculate_attribution.py
analysis/3.training_attribution/epidermis/paw/unidirectional_sum_AGFR/softmax_to_pool_attribution_batch/: run_softmax_to_pool_attribution.py
analysis/3.training_attribution/simulation/del-div/feature_ZZFR/calculate_attribution_batch/: run_calculate_attribution.py
analysis/3.training_attribution/simulation/del-div/feature_ZZFR/softmax_to_pool_attribution_batch/: base_path.txt  run_softmax_to_pool_attribution.py
